--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
   <title>
-    Pinto
+    Colégio Marins
   </title>
   </head>
 <body>
