--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
@@ -7,7 +8,7 @@
   </head>
 <body>
   <div class="Title">
-     <h1>Escola Marins</h1>
+     <h1> Marins</h1>
   </div>
  
 </body>
