--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <body>
   <div class="Title">
-     <h1> i love Marins</h1>
+     <img src="./image/73.jpg" alt="">
   </div>
  
 </body>
