--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <img class="estudante-icone" src="instagram.png" alt="icone instagram">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
+            <img class="estudante-imagem" src="./image/ermione" alt="foto da maria">
             <h3 class="estudante-nome">Maria</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
+            <img class="estudante-imagem" src="./image/ron.jpeg" alt="foto da olhe">
             <h3 class="estudante-nome">Olivia</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
