--- a/index.html
+++ b/index.html
@@ -3,46 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Site </title>
+    <title>Site</title>
     <link rel="stylesheet" href="style.css"> 
-    <link rel="preconnect" href="https://fonts.googleapis.com"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="htpps://fonts.googleapis.com/css2?family=Poppins&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <style>
+        /* Estilo geral para aumentar a fonte */
+        body {
+            font-family: 'Poppins', sans-serif;
+            font-size: 18px; /* Aumenta o tamanho da fonte de todos os textos */
+        }
 
+        h1, h2, h3, p, li {
+            font-size: 1.2em; /* Aumenta o tamanho da fonte para títulos, parágrafos e itens de lista */
+        }
 
+        /* Estilos para o cabeçalho */
+        header.cabecalho {
+            font-size: 1.5em;
+        }
+
+        /* Estilos para o conteúdo da escola */
+        .escola-titulo {
+            font-size: 2em;
+        }
+
+        .escola-texto-um,
+        .escola-texto-dois {
+            font-size: 1.3em;
+        }
+
+        /* Estilos para os estudantes */
+        .estudante-titulo {
+            font-size: 2em;
+        }
+
+        .estudante-nome {
+            font-size: 1.5em;
+        }
+
+        /* Rodapé */
+        footer.rodape {
+            font-size: 1em;
+        }
+    </style>
 </head>
-
-
 <body>
-    <header class="cabecalho>
+    <header class="cabecalho">
         <img class="cabecalho-imagem" src="logoescola.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
-</header> 
+    </header> 
 
-
-
-<section class="escola"
-     <div class="escola-div-conteudo">
-     <h2 class="escola-titulo">Sobre a Escola </h2>   
-     <p class="escola-texto-um"> O Colégio Dr. Marins Alves de Camargo - EFMP, foi fundado em 15 de fevereiro de 1959.</p>
-     <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A, somos unidos e a turma favorita dos professores(as)</p>
-     </div>
-     <img class="escola-imagem" src="./image/escola mrains" alt="imagem que representa uma professora em sala de aula">
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">O Colégio Dr. Marins Alves de Camargo - EFMP, foi fundado em 15 de fevereiro de 1959.</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A, somos unidos e a turma favorita dos professores(as).</p>
+        </div>
+        <img class="escola-imagem" src="./image/escola_mrains.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
+
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
         <div class="estudante-div">
             <img class="estudante-imagem" src="./image/rony.jpeg" alt="foto do marcelo">
-            <h3 class="estudant-nome">Marcelo</h3>
+            <h3 class="estudante-nome">Marcelo</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
             <img class="estudante-icone" src="instagram.png" alt="icone instagram">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./image/ermione" alt="foto da maria">
+            <img class="estudante-imagem" src="./image/ermione.jpg" alt="foto da maria">
             <h3 class="estudante-nome">Maria</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
@@ -55,10 +90,8 @@
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
-        <span></span>
-        <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="./image/images (8).jpeg" alt="foto da rafa">
+            <img class="estudante-imagem" src="./image/images_rafa.jpg" alt="foto da rafa">
             <h3 class="estudante-nome">Rafaela</h3>
             <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
@@ -68,16 +101,13 @@
             <img class="estudante-imagem" src="./image/asdasdasd.jpg" alt="foto da thais">
             <h3 class="estudante-nome">Thais</h3>
             <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/thais-pianuinlinkin logo.pncci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
+            <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
-
-    </div>
-
-    </div>
     </section>
+
     <footer class="rodape">
-        <img class="rodape-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img class="rodape-imagem" src="alurastart_logo.png" alt="logo da alura start">
     </footer>
 </body>
-</html>
+</html>.
